--- a/fitclub/src/home.css
+++ b/fitclub/src/home.css
@@ -1,10 +1,3 @@
-body {
-    
-    margin: 0;
-    font-family: 'Arial', sans-serif;
-    background-color: #fff;
-    color: #333;
-  }
   
   body {
     margin: 0;
@@ -19,7 +12,7 @@ body {
   .app {
     flex: 1;
     margin: 0 auto;
-    padding: 0px;
+    padding: 16px;
     display: flex;
     flex-direction: column;
   }
@@ -33,24 +26,24 @@ body {
   }
   
   .logo {
-    font-size: 24px;
+    font-size: 40px;
     font-weight: bold;
-    color: #f50057;
+    color: #FF005E;
   }
   
   .star {
-    color: gold;
+    color: #FFEE00;
+    border: #FF005E;
   }
   
-  nav a {
-    margin-left: 20px;
-    text-decoration: none;
+  .active {
+    margin-right: 20px;
     font-size: 18px;
     color: #333333;
   }
   
   .login {
-    color: #f50057;
+    color: #FF005E;
   }
   
   /* Main Content */
@@ -60,6 +53,8 @@ body {
     align-items: center;
     justify-content: space-between;
     margin-top: 40px;
+    margin-left: 16px;
+    
   }
   
   .text-section {
@@ -68,6 +63,7 @@ body {
   }
   
   .text-section h1 {
+  
     font-size: 40px;
     font-weight: bold;
     margin-bottom: 20px;
@@ -80,13 +76,21 @@ body {
   }
   
   .cta-button {
-    background-color: #f50057;
+    background-color: #FF005E;
     color: white;
     border: none;
     padding: 15px 25px;
     font-size: 18px;
     cursor: pointer;
     border-radius: 5px;
+  }
+
+  .cta-button :hover{
+    background-color: white;
+    color: #FF005E;
+    border: #FF005E;
+    border-radius: 2px;
+
   }
   
   /* Image Section */
@@ -98,17 +102,8 @@ body {
   }
   
   .image {
-    max-width: 100%;
+    max-width: 75%;
     height: auto;
     border-radius: 10px;
   }
   
-  /* Footer */
-  .footer {
-    text-align: center;
-    padding: 20px 0;
-    background-color: #f9f9f9;
-    color: #777;
-    font-size: 16px;
-    border-top: 1px solid #eee;
-  }
