--- a/fitclub/src/home.css
+++ b/fitclub/src/home.css
@@ -98,6 +98,7 @@
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    margin-bottom: 20px;
     transition: border-radius 0.3s, background-color 0.3s, transform 0.2s;
   }
 
@@ -114,6 +115,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
   }
   
   .image {
@@ -122,6 +124,27 @@
     border-radius: 10px;
   }
 
+  @media (max-width: 992px) {
+    .main-content {
+      flex-direction: column; /* Меняем направление с горизонтального на вертикальное */
+      justify-content: center; /* Центрируем элементы */
+      align-items: center; /* Выравниваем элементы по центру */
+    }
+  
+    .text-section {
+      max-width: 90%; /* Расширяем текстовый блок */
+      text-align: center; /* Центрируем текст */
+      padding: 0 10px; /* Добавляем отступы */
+    }
+  
+    .content-image {
+      margin-top: 20px; /* Добавляем отступ сверху для изображения */
+    }
+  
+    .image {
+      max-width: 90%; /* Уменьшаем ширину изображения */
+    }
+  }
 
 
   
